samples/_failures_safe/1761619941_73547e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6267821b.c: In function ‘main’:
./samples/SAFE/__tmp_6267821b.c:153:5: error: expected expression at end of input
  153 |     if (pair_count >
      |     ^~
./samples/SAFE/__tmp_6267821b.c:153:5: error: expected declaration or statement at end of input
